--- a/hello2.html
+++ b/hello2.html
@@ -5,7 +5,7 @@
         <script>
             function hello(){
                 let heading=document.querySelector('h1');
-            if(heading.innerHTML=== 'hello world!'){
+            if(heading.innerHTML=== 'hello world!!'){
                 heading.innerHTML='hey!';
             }
             else{heading.innerHTML='hello world!';
